user role done -> check filter role